for php version 5.3 updating dist type from precise to trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
       env: WP_TRAVISCI=phpcs
     - php: 5.3
       env: WP_VERSION=latest
-      dist: precise
+      dist: trusty
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
