--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
       env: WP_VERSION=latest multisite=0
 
 before_install:
-  - wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -P
+  - wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 install:
   - php wp-cli.phar plugin install woocommerce --activate
   - wp core update-db --network
