--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,10 @@ cache:
 matrix:
   include:
     - php: 7.2
-      env: WP_VERSION=latest multisite=0
+      env: WP_VERSION=latest WP_MULTISITE=0 TEST_PACKAGE="wp-cli/wp-cli-bundle wp-cli/wp-cli"
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -P $(pwd)/
   - wp plugin install woocommerce --activate
   - wp core update-db --network
   - |
@@ -46,7 +45,7 @@ script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       phpunit
-      WP_MULTISITE=1 phpunit
+      WP_MULTISITE=0 phpunit
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
