--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"  
   - export WP_DEVELOP_DIR=/tmp/wordpress/
   - mkdir -p $WP_DEVELOP_DIR
-    # Use the Git mirror of WordPress.
-  - git clone --depth=1 --branch="$WP_VERSION" git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
+
+  - git clone git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
   
   - git clone https://github.com/EmptyOps/woocommerce.git /home/travis/build/EmptyOps/woocommerce
   - |
