--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_script:
   - export WP_DEVELOP_DIR=/tmp/wordpress/
   - mkdir -p $WP_DEVELOP_DIR
 
-  - git clone git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
+  - git clone git://develop.git.wordpress.org/ /tmp/wordpress/
   
   - git clone https://github.com/EmptyOps/woocommerce.git /home/travis/build/EmptyOps/woocommerce
   - |
