--- a/old-travis.yml
+++ b/old-travis.yml
@@ -27,7 +27,10 @@ jobs:
       env: WP_VERSION=latest WP_MULTISITE=0 RUN_PHPCS=1
 
 before_script:  
-  - export PATH="$HOME/.composer/vendor/bin:$PATH"    
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"  
+  
+  - git clone git://develop.git.wordpress.org/ /tmp/wordpress/
+  
   - git clone https://github.com/EmptyOps/woocommerce.git /home/travis/build/EmptyOps/woocommerce
   - |
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
