--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
 
 before_script:  
   - export PATH="$HOME/.composer/vendor/bin:$PATH"  
-  - mkdir -p /dump
+  - mkdir /dump -p
   - git clone https://github.com/WordPress/wordpress-develop.git /dump
   - mv /dump/tests / -r
   
