--- a/.travis.yml
+++ b/.travis.yml
@@ -22,36 +22,14 @@ env:
     - WP_CLI_BIN_DIR="$TRAVIS_BUILD_DIR/vendor/bin"
     - WP_VERSION=latest WP_MULTISITE=0
 
-modules:
-      enabled:
-        - WPLoader
-      config:
-        WPLoader:
-          multisite: false
-          wpRootFolder: "/tmp/wordpress"
-          dbName: "wordpresss_tests"
-          dbHost: "localhost"
-          dbUser: "root"
-          dbPassword: "password"
-          isolatedInstall: true
-          tablePrefix: "wptests_"
-          domain: "wordrpess.localhost"
-          adminEmail: "admin@wordpress.localhost"                            
-          plugins: ['', 'my-plugin/my-plugin.php']
-          activatePlugins: ['hello.php', 'my-plugin/my-plugin.php']
-
 jobs:
   include:
     - php: 7.2
       env: WP_VERSION=latest WP_MULTISITE=0 RUN_PHPCS=1
 
 before_script:  
-
-  - export PATH="$HOME/.composer/vendor/bin:$PATH"  
-  - git clone https://github.com/WordPress/wordpress-develop.git /home/travis/build/EmptyOps/wptest  
-
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"    
   - git clone https://github.com/EmptyOps/woocommerce.git /home/travis/build/EmptyOps/woocommerce
-
   - |
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
       phpenv config-rm xdebug.ini
@@ -61,7 +39,7 @@ before_script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-      composer global require "phpunit/phpunit=4.8.*|5.7.*"
+      composer global require "phpunit/phpunit=5.7.*|7.5.*"
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
@@ -72,7 +50,8 @@ before_script:
 script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
-      phpunit      
+      phpunit
+      WP_MULTISITE=1 phpunit
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
