--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ jobs:
 before_script:  
   - export PATH="$HOME/.composer/vendor/bin:$PATH"    
   - git clone https://github.com/EmptyOps/woocommerce.git /home/travis/build/EmptyOps/woocommerce
+  - git clone https://github.com/EmptyOps/woocommerce.git /tmp/wordpress/wp-contents/plugins/woocommerce
   - |
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
       phpenv config-rm xdebug.ini
