--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,12 @@ jobs:
     - php: 7.2
       env: WP_VERSION=latest WP_MULTISITE=0 RUN_PHPCS=1
 
-before_script:  
+before_script:    
   - export PATH="$HOME/.composer/vendor/bin:$PATH"    
+  - curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar 
+  - chmod +x wp-cli.phar 
+  - move wp-cli.phar /tmp/wordpress/wp
+  - php /tmp/wordpress/wp plugin install woocommerce --activate
   - git clone https://github.com/EmptyOps/woocommerce.git /home/travis/build/EmptyOps/woocommerce
   - |
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
