--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ notifications:
     on_failure: change
 
 services:
-  - mysql
-  - xvfb
+  - mysql  
 
 cache:
   directories:
@@ -50,7 +49,9 @@ script:
   - curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar > wp
   - chmod +x wp 
   - mv wp /tmp/wordpress/
-  - php /tmp/wordpress/wp plugin install woocommerce --activate
+  - php /tmp/wordpress/wp plugin install woocommerce --activate || echo $?
+  - php /tmp/wordpress/wp plugin is-installed WooCommerce || echo $?
+  - php /tmp/wordpress/wp plugin is-active WooCommerce || echo $?
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then      
       phpunit      
@@ -62,3 +63,4 @@ script:
 branches:
   only:    
     - wbctests
+    
