--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,9 @@ script:
   - curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar > wp
   - chmod +x wp 
   - mv wp /tmp/wordpress/
-  - php /tmp/wordpress/wp plugin install woocommerce --activate || echo $?
-  - php /tmp/wordpress/wp plugin is-installed WooCommerce || echo $?
-  - php /tmp/wordpress/wp plugin is-active WooCommerce || echo $?
+  - composer require woocommerce/woocommerce
+  - composer install --no-dev
+  - php /tmp/wordpress/wp plugin activate woocommerce  
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then      
       phpunit      
@@ -63,4 +63,3 @@ script:
 branches:
   only:    
     - wbctests
-    
