--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
         }
     ],
     "require": {
-        "wpackagist-plugin/woocommerce": "^3.8"
+        "wpackagist-plugin/woocommerce": "^3.8",
+        "phpunit/phpunit": "7.5.18",
+    },
+    "require-dev": {
+        "phpunit/phpunit": "7.5.18",
     }
 }
