--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
     ],
     "require": {
         "wpackagist-plugin/woocommerce": "^3.8",
-        "phpunit/phpunit": "7.5.18",
+        "phpunit/phpunit": "7.5.18"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.5.18",
+        "phpunit/phpunit": "7.5.18"
     }
 }
