--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,8 @@ script:
   - curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar > wp
   - chmod +x wp 
   - mv wp /tmp/wordpress/  
-  - composer install --no-dev
+  - cp composer.json /tmp/wordpress/
+  - composer install -d /tmp/wordpress/
   - php /tmp/wordpress/wp plugin activate woocommerce  
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then      
