--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,8 @@ script:
   - composer install -d /tmp/wordpress/
   - php /tmp/wordpress/wp plugin activate woocommerce  
   - |
-    if [[ ! -z "$WP_VERSION" ]] ; then      
+    if [[ ! -z "$WP_VERSION" ]] ; then 
+      bin/install-wp-tests.sh     
       phpunit      
     fi
   - |
