--- a/.travis.yml
+++ b/.travis.yml
@@ -51,10 +51,10 @@ script:
   - mv wp /tmp/wordpress/  
   - cp composer.json /tmp/wordpress/
   - composer install -d /tmp/wordpress/
-  - php /tmp/wordpress/wp plugin activate woocommerce  
+  - php /tmp/wordpress/wp plugin activate woocommerce
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then 
-      bin/install-wp-tests.sh     
+      bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
       phpunit      
     fi
   - |
