--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,13 @@ before_script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+      curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar > wp
+      chmod +x wp
+      mv wp /tmp/wordpress/
+      cp composer.json /tmp/wordpress/
+      composer install -d /tmp/wordpress/
       composer global require "phpunit/phpunit=5.7.*|7.5.*"
+      php /tmp/wordpress/wp plugin activate woocommerce
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
@@ -45,16 +51,9 @@ before_script:
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
 
-script:
-  - curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar > wp
-  - chmod +x wp 
-  - mv wp /tmp/wordpress/  
-  - cp composer.json /tmp/wordpress/
-  - composer install -d /tmp/wordpress/
-  - php /tmp/wordpress/wp plugin activate woocommerce
+script:  
   - |
-    if [[ ! -z "$WP_VERSION" ]] ; then 
-      bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+    if [[ ! -z "$WP_VERSION" ]] ; then       
       phpunit      
     fi
   - |
