--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ env:
 
 jobs:
   include:
+    - php: 5.6
+      env: WP_VERSION=3.5 WP_MULTISITE=0 RUN_PHPCS=1     
     - php: 7.2
       env: WP_VERSION=latest WP_MULTISITE=0 RUN_PHPCS=1    
 
@@ -55,7 +57,7 @@ script:
     fi
 branches:
   only:    
-    #- wbctests
+    - wbctests
     - master
     
 deploy:
