updating travis config

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-EO_WooCommerce_Bundle_Choice/.settings
-EO_WooCommerce_Bundle_Choice/.buildpath
-EO_WooCommerce_Bundle_Choice/.project
+.ihiintel
 .gitignore
