--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {    
     "require": {
         "woocommerce/woocommerce": "^3.8",
-        "phpunit/phpunit": "7.5.18"
+        "phpunit/phpunit": "5.7.*"
     }   
 }
