--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ matrix:
     - language: node_js
       node_js:
         - "10.21.0"
-      script: node_modules/karma/bin/karma start karma.conf.js --single-run
+      script: npm test #node_modules/karma/bin/karma start karma.conf.js --single-run
       before_install:
         - export DISPLAY=:99.0
         - sh -e /etc/init.d/xvfb start
