--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require": {
         "woocommerce/woocommerce": "^3.8",
         "phpunit/phpunit": "5.7.*"
+    },
+    "require-dev": {
+        "codeception/codeception": "*",
     }   
 }
