--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,7 +8,7 @@ actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
-            url: http://127.0.0.1:9000 #http://localhost/myapp
+            url: http://127.0.0.1:9000/$TRAVIS_BUILD_DIR #http://localhost/myapp
         - \Helper\Acceptance
     step_decorators: ~        
 
