front end modules testing

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -12,5 +12,5 @@ modules:
         - \Helper\Acceptance
     step_decorators: ~        
 
-
+echo $TRAVIS_BUILD_DIR
 #$php vendor/bin/codecept run --steps
