--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "woocommerce/woocommerce": "^3.8",
-        "phpunit/phpunit": "5.7.*"
+        "phpunit/phpunit": "5.7.*",
+        "lucatume/wp-browser": "^1.14"
     },
     "require-dev": {
         "codeception/codeception": "^4.1",
