--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ matrix:
         # Install WordPress
         - source travis.sh
         - install-wordpress
+        - install_test_suite
         # Start up a web server.
         - php -S "$WP_CEPT_SERVER" -t "$WP_CORE_DIR" >/dev/null 2>&1 &
         # Start up the webdriver.
