front end modules testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,7 @@ matrix:
         # Install Codeception and WP Browser.
         # Doing this last gives the webdriver and server time to start up.
         - composer install --prefer-source
+        - composer update --prefer-source
 
       script:
         - |
