--- a/.travis.yml
+++ b/.travis.yml
@@ -78,15 +78,19 @@ matrix:
         - source travis.sh
         - install-wordpress
         - install_test_suite
+        - move_things
+        
         # Start up a web server.
         - php -S "$WP_CEPT_SERVER" -t "$WP_CORE_DIR" >/dev/null 2>&1 &
         # Start up the webdriver.
         - phantomjs --webdriver=4444 >/dev/null 2>&1 &
+        
         # Install Codeception and WP Browser.
         # Doing this last gives the webdriver and server time to start up.
-        - composer require codeception/module-webdriver --dev
-        - composer install --prefer-source
-        - composer update --prefer-source
+        # - composer require codeception/module-webdriver --dev
+        # - composer install --prefer-source
+        # - composer update --prefer-source
+        - composer_and_wp_plugins_install_update
 
       script:
         - |
