--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ matrix:
         - export WP_VERSION=master
         - export WP_DEVELOP_DIR=/tmp/wordpress
         - export WP_CORE_DIR=/tmp/wordpress/src
-        - export WP_CEPT_SERVER='127.0.0.1:8888/src'
+        - export WP_CEPT_SERVER='127.0.0.1:8888'
         # Install WordPress
         - source travis.sh
         - install-wordpress
