front end modules testing

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -18,6 +18,9 @@
 
 # Codeception Acceptance Test Suite Configuration
 class_name: AcceptanceTester
+# modules:
+#     enabled:
+#         - WPWebDriver
 modules:
     enabled:
-        - WPWebDriver
+        - Selenium2
