--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -9,9 +9,18 @@ settings:
     bootstrap: bootstrap.php
     colors: true
     memory_limit: 1024M
+# modules:
+#     config:
+#         WPWebDriver:
+#             url: 'http://127.0.0.1:8888'
+#             browser: phantomjs
+#             window_size: '1024x768'
+#             adminUsername: admin
+#             adminPassword: password
+#             adminUrl: /wp-admin
 modules:
     config:
-        WPWebDriver:
+        Selenium2:
             url: 'http://127.0.0.1:8888'
             browser: phantomjs
             window_size: '1024x768'
