--- a/.travis.yml
+++ b/.travis.yml
@@ -82,6 +82,11 @@ matrix:
         - php -S "$WP_CEPT_SERVER" -t "$WP_CORE_DIR" >/dev/null 2>&1 &
         # Start up the webdriver.
         - phantomjs --webdriver=4444 >/dev/null 2>&1 &
+
+        #selenium
+        - git clone https://github.com/srimaln91/selenium-installer.git
+        - cd selenium-installer
+        - sudo bash selenium_install.sh
         
         # Install Codeception and WP Browser.
         # Doing this last gives the webdriver and server time to start up.
