--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,8 @@ matrix:
         # Start up a web server.
         - php -S "$WP_CEPT_SERVER" -t "$WP_CORE_DIR" >/dev/null 2>&1 &
         # Start up the webdriver.
-        - phantomjs --webdriver=4444 >/dev/null 2>&1 &
+        #- phantomjs --webdriver=4444 >/dev/null 2>&1 &
+        # - phantomjs --webdriver=4444 >/dev/null 2>&1 &
 
         #selenium
         - git clone https://github.com/srimaln91/selenium-installer.git
