front end modules testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ matrix:
         - git clone https://github.com/srimaln91/selenium-installer.git
         - cd selenium-installer
         - sudo bash selenium_install.sh
-        - selenium start
+        - selenium start &
         - cd ..
         
         # Install Codeception and WP Browser.
