--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -20,7 +20,7 @@ settings:
 #             adminUrl: /wp-admin
 modules:
     config:
-        selenium:
+        Selenium2:
             url: 'http://127.0.0.1:8888'
             browser: phantomjs
             window_size: '1024x768'
