front end modules testing

--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -18,12 +18,13 @@ settings:
 #             adminUsername: admin
 #             adminPassword: password
 #             adminUrl: /wp-admin
-modules:
-    config:
-        Selenium2:
-            url: 'http://127.0.0.1:8888'
-            browser: phantomjs
-            window_size: '1024x768'
-            adminUsername: admin
-            adminPassword: password
-            adminUrl: /wp-admin
+
+# modules:
+#     config:
+#         Selenium2:
+#             url: 'http://127.0.0.1:8888'
+#             browser: phantomjs
+#             window_size: '1024x768'
+#             adminUsername: admin
+#             adminPassword: password
+#             adminUrl: /wp-admin
