--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -12,15 +12,25 @@
 #         - \Helper\Acceptance
 #     step_decorators: ~        
 
-# #echo "echoingnn TRAVIS_BUILD_DIR..."
-# #echo $TRAVIS_BUILD_DIR
-# #$php vendor/bin/codecept run --steps
-
 # Codeception Acceptance Test Suite Configuration
 class_name: AcceptanceTester
 # modules:
 #     enabled:
 #         - WPWebDriver
+
+# modules:
+#     enabled:
+#         - Selenium2
+
 modules:
     enabled:
-        - Selenium2
+        - WebDriver:
+            url: 'http://127.0.0.1:8888'
+            window_size: false # disabled in ChromeDriver
+            port: 9515
+            browser: chrome
+            capabilities:
+                "goog:chromeOptions":
+                    args: ["--headless", "--disable-gpu", "--window-size=1024,768"]
+        - \Helper\Acceptance
+    step_decorators: ~        
