--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -28,3 +28,12 @@ settings:
 #             adminUsername: admin
 #             adminPassword: password
 #             adminUrl: /wp-admin
+
+modules:
+    config:
+        WebDriver:
+            url: 'http://127.0.0.1:8888'
+            browser: chrome
+            capabilities:
+                "goog:chromeOptions":
+                    args: ["--headless", "--disable-gpu", "--window-size=1024,768"]
