--- a/.travis.yml
+++ b/.travis.yml
@@ -102,15 +102,19 @@ matrix:
         - sleep 3 # give xvfb some time to start
 
         - echo "Download selenium-server-standalone jar file"
-        - wget -c -nc --retry-connrefused --tries=0 https://bit.ly/2TlkRyu -O selenium-server-standalone.jar
-
+        # - wget -c -nc --retry-connrefused --tries=0 https://bit.ly/2TlkRyu -O selenium-server-standalone.jar
+        - wget -c -nc --retry-connrefused --tries=0 http://selenium-release.storage.googleapis.com/2.53/selenium-server-standalone-2.53.1.jar -O selenium-server-standalone.jar
+        
         - echo "Download chromedriver"
-        - wget https://chromedriver.storage.googleapis.com/74.0.3729.6/chromedriver_linux64.zip
+        # - wget https://chromedriver.storage.googleapis.com/74.0.3729.6/chromedriver_linux64.zip
+        - wget https://chromedriver.storage.googleapis.com/2.27/chromedriver_linux64.zip
         - unzip -o -q chromedriver_linux64.zip
 
         - echo "Run selenium-server"
-        # - nohup bash -c "java -jar selenium-server-standalone.jar &" && sleep 1; cat nohup.out
-        - nohup bash -c "java -jar selenium-server-standalone.jar &" && sleep 1; 
+        # # - nohup bash -c "java -jar selenium-server-standalone.jar &" && sleep 1; cat nohup.out
+        # - nohup bash -c "java -jar selenium-server-standalone.jar &" && sleep 1; 
+        - nohup bash -c "java -jar selenium-server-standalone.jar -Dwebdriver.chrome.driver="chromedriver" -Dwebdriver.chrome.whitelistedIps="localhost"" && sleep 1; 
+
 
         # Install Codeception and WP Browser.
         # Doing this last gives the webdriver and server time to start up.
