--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -36,4 +36,4 @@ modules:
             browser: chrome
             capabilities:
                 "goog:chromeOptions":
-                    args: ["--headless", "--disable-gpu", "--window-size=1024,768", "--enable-javascript"]
+                    args: ["--disable-gpu", "--window-size=1024,768", "--enable-javascript"]
