--- a/.travis.yml
+++ b/.travis.yml
@@ -27,14 +27,15 @@ env:
   global:
     - PATH="$TRAVIS_BUILD_DIR/vendor/bin:$PATH"
     - WP_CLI_BIN_DIR="$TRAVIS_BUILD_DIR/vendor/bin"
-    - WP_VERSION=latest WP_MULTISITE=0
+    # - WP_VERSION=latest WP_MULTISITE=0
+    - WP_MULTISITE=0
     - NODE_VERSION="12.0"
     
 matrix:
   include:
-    - language: node_js
-      node_js:
-        - "10.21.0"
+    # - language: node_js
+    #   node_js:
+    #     - "10.21.0"
 
     - language: php
       php: 7.2
