--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ env:
     
 matrix:
   include:
-    - language: node_js
-      node_js:
-        - "10.21.0"
+    # - language: node_js
+    #   node_js:
+    #     - "10.21.0"
 
     - language: php
       php: 7.2
