--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,21 @@ env:
     # - WP_VERSION=latest WP_MULTISITE=0
     - WP_MULTISITE=0
     - NODE_VERSION="12.0"
+    # Define vars.
+    - export WP_VERSION=master
+    - export WP_DEVELOP_DIR=/tmp/wordpress
+    - export WP_CORE_DIR=/tmp/wordpress/src
+    - export WP_CEPT_SERVER='127.0.0.1:8888'
     
 matrix:
   include:
-    # - language: node_js
-    #   node_js:
-    #     - "10.21.0"
+    - language: node_js
+      node_js:
+        - "10.21.0"
+      before_script:
+        - sleep 30s
+        - echo "cd to WP_DEVELOP_DIR..."
+        - cd $WP_DEVELOP_DIR
 
     - language: php
       php: 7.2
@@ -75,11 +84,6 @@ matrix:
             phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
           fi
 
-        # Define vars.
-        - export WP_VERSION=master
-        - export WP_DEVELOP_DIR=/tmp/wordpress
-        - export WP_CORE_DIR=/tmp/wordpress/src
-        - export WP_CEPT_SERVER='127.0.0.1:8888'
         # Install WordPress
         - source travis.sh
         - install-wordpress
